--- a/onlinebookstore-J2EE/Jenkinsfile
+++ b/onlinebookstore-J2EE/Jenkinsfile
@@ -8,6 +8,8 @@ pipeline {
     stage('Build JAR') {
       steps {
         git url: 'https://github.com/your-org/your-repo.git', branch: 'main'
+        sh 'pwd'
+        sh 'ls -lrt'
         sh 'mvn clean package'
         archiveArtifacts artifacts: '**/target/*.jar', fingerprint: true
       }
