--- a/onlinebookstore-J2EE/Jenkinsfile
+++ b/onlinebookstore-J2EE/Jenkinsfile
@@ -7,10 +7,10 @@ pipeline {
   stages {
     stage('Build JAR') {
       steps {
-        git url: 'https://github.com/your-org/your-repo.git', branch: 'main'
+        git url: 'https://github.com/vikneshpitchandi/OnlineBookStore.git', branch: 'main'
         sh 'pwd'
         sh 'ls -lrt'
-        sh 'mvn clean package'
+        sh 'mvn -f /var/lib/jenkins/workspace/Build_bookstoreJAR/onlinebookstore-J2EE/pom.xml clean package'
         archiveArtifacts artifacts: '**/target/*.jar', fingerprint: true
       }
     }
