--- a/onlinebookstore-J2EE/Jenkinsfile
+++ b/onlinebookstore-J2EE/Jenkinsfile
@@ -23,7 +23,7 @@ pipeline {
           wait $pid
         '''
 
-        archiveArtifacts artifacts: '**/target/*.jar', fingerprint: true
+        archiveArtifacts artifacts: '**/target/*.war', fingerprint: true
       }
     }
   }
